--- a/.github/workflows/API.yml
+++ b/.github/workflows/API.yml
@@ -1,4 +1,4 @@
-name: Automated API tests using Postman CLI
+name: Automated API tests using Postman CLI and Newman
 
 on: push
 
@@ -6,12 +6,45 @@ jobs:
   automated-api-tests:
     runs-on: ubuntu-latest
     steps:
+      # Check out the repository code
       - uses: actions/checkout@v4
+      
+      # Install Postman CLI
       - name: Install Postman CLI
         run: |
           curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+
+      # Login to Postman CLI
       - name: Login to Postman CLI
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
-      - name: Run API tests
+      
+      # Run API tests with Postman CLI
+      - name: Run API tests with Postman CLI
         run: |
           postman collection run "${{ github.workspace }}/postman/collections/Login.json" -e "9797408-be925b13-5796-4b03-8d0f-e8e61fb3cbf2"
+
+      # Install Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      # Install Newman globally
+      - name: Install Newman
+        run: npm install -g newman
+
+      # Run API tests with Newman as an alternative
+      - name: Run API tests with Newman
+        run: |
+          newman run "${{ github.workspace }}/postman/collections/Login.json" \
+            -e "${{ github.workspace }}/postman/environments/YourEnvironmentFile.json" \
+            --reporters cli,html \
+            --reporter-html-export newman-report.html
+
+      # Upload the Newman HTML report as an artifact
+      - name: Upload Newman Report
+        if: always()  # Ensures the report is uploaded even if tests fail
+        uses: actions/upload-artifact@v2
+        with:
+          name: newman-report
+          path: newman-report.html
